# wdn-thesis

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
configs/: eval.yaml  generate.yaml  generate_attacks.yaml  generate_modena.yaml  generate_moe_modena.yaml  generate_moe_net1.yaml  generate_temporal_moe_modena.yaml  generate_temporal_moe_net3.yaml  sweep.yaml  train_multitask.yaml  train_recon.yaml
dashboard/: app.py
data/: architecture_comparison.json  comparison_30_50.json
deliverables/: README.md
docs/: conferences.md  cross_domain_framing.md  replay_ceiling.md  threat_models.md
results_package/: README.md
scripts/: aggregate_arch_experiments.py  aggregate_norm_all_domains.py  analyze_replay_ceiling.py  build_conference_extras.py  build_results_package.py  compare_rw_sweep.py  diagnose_router.py  eval_atkmoe.py  eval_cascade.py  eval_classical_baselines.py  eval_crossnet.py  eval_ensemble.py  eval_multiseed.py  eval_multiseed_net3.py  eval_robustness.py  eval_selfplay_modena.py  eval_selfplay_three_nets.py  eval_threshold_sweep.py  generate_power_grid.py  generate_traffic.py  heldout_novel_attack.py  make_deliverables.py  plot_selfplay.py  run_10seed.sh  run_10seed_rw25.sh  run_5seed_final.sh  run_5seed_power.sh  run_5seed_power_pernode.sh  run_5seed_selfplay_modena.sh  run_5seed_selfplay_modena_pgd.sh  run_5seed_selfplay_modena_pgd2.sh  run_5seed_selfplay_modena_ret5.sh  run_5seed_selfplay_modena_retention.sh  run_5seed_traffic.sh  run_5seed_traffic_pernode.sh  run_arch_experiments.sh  run_completion.sh  run_gnn_comparison.sh  (+9 more)
(+156 files in other folders)
